--- a/test/mock/src/pages/ejs/ejs2.ejs
+++ b/test/mock/src/pages/ejs/ejs2.ejs
@@ -1,2 +1,2 @@
 <p>ejs-2</p>
-<%- include('partials/test-partial', { from: 'page-ejs2' }) %>
+<%- include('/partials/test-partial', { from: 'page-ejs2' }) %>
